# tick-trade

./: Cargo.toml  LICENSE  readme.md
crates/apis/rithmic/: Cargo.toml
crates/apis/rithmic/src/: lib.rs  readme.md
crates/apis/rithmic/src/client/: api_base.rs  futures_universe_provider_impl.rs  history_provider_impl.rs  outgoing.rs  server_models.rs  tests.rs
crates/apis/rithmic/src/client/rithmic_proto_objects/: rti.rs
crates/apis/rithmic/src/common/: futures_universe_provider_impl.rs  history_provider_impl.rs  mod.rs  models.rs
crates/apis/rithmic/src/plant_handlers/: common_requests.rs  handle_repo_plant.rs  mod.rs
crates/apis/rithmic/src/plant_handlers/history_plant/: handle_history_plant.rs  requests.rs
crates/apis/rithmic/src/plant_handlers/order_plant/: handle_order_plant.rs  mod.rs  requests.rs
crates/apis/rithmic/src/plant_handlers/pnl_plant/: handle_pnl_plant.rs  mod.rs  requests.rs
crates/apis/rithmic/src/plant_handlers/tick_plant/: handle_tick_plant.rs  mod.rs  requests.rs
crates/apis/rithmic/src/websocket/: api_base.rs  client.rs  errors.rs  futures_universe_provider_impl.rs  helpers.rs  history_provider_impl.rs  mod.rs  models.rs  tests.rs
crates/apis/rithmic/src/websocket/mapping/: common_requests.rs  helpers.rs  mod.rs
crates/apis/rithmic/src/websocket/mapping/history_plant/: map_history_plant.rs  mod.rs  requests.rs
crates/apis/rithmic/src/websocket/mapping/order_plant/: map_order_plant.rs  mod.rs  requests.rs
crates/apis/rithmic/src/websocket/mapping/pnl_plant/: handle_pnl_plant.rs  mod.rs  requests.rs
crates/apis/rithmic/src/websocket/mapping/tick_plant/: handle_tick_plant.rs  requests.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/src/user_strategies/: data_feed_strategy.rs  mbo_strategy.rs  mod.rs
crates/database/: Cargo.toml  README.md
crates/database/src/: append.rs  catalog.rs  duck.rs  duck_queries.rs  helpers.rs  ingest.rs  layout.rs  lib.rs  merge.rs  models.rs  paraquet.rs  parquet.rs  paths.rs  perist.rs  queries.rs  replay.rs  schema.sql
crates/standard_lib/: Cargo.toml
crates/standard_lib/src/: lib.rs
crates/standard_lib/src/engine_core/: api_traits.rs  clock.rs  data_events.rs  engine_ctx.rs  event_hub.rs  mod.rs  provider_resolver.rs  public_classes.rs  strategy_engine.rs  strategy_manager.rs
crates/standard_lib/src/market_data/: base_data.rs  consolidators.rs  market_by_order.rs  mod.rs
crates/standard_lib/src/reality_models/: mod.rs  models.rs  traits.rs
crates/standard_lib/src/reality_models/inbuilt/: defaults.rs  mod.rs
crates/standard_lib/src/securities/: futures_helpers.rs  market_hours.rs  mod.rs  registry.rs  security.rs  symbols.rs
crates/standard_lib/src/universes/: mod.rs  models.rs
crates/standard_lib/src/universes/inbuilt/: front_month.rs  mod.rs  static.rs
