[workspace]
members = [ 
    "crates/apis/rithmic",
    "crates/app", 
    "crates/standard_lib"
]
resolver = "3"

[workspace.package]
edition = "2024"


[workspace.dependencies]
chrono = "*"
chrono-tz = "*"
dashmap = "7.0.0-rc2"
dotenvy = "0.15.7"
futures-util = "0.3.31"
lazy_static = "1.5.0"
prost = "0.14.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "*"
serde = { version = "1.0.219", features = ["derive"] }
strum_macros = "*"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs"]}
tokio-tungstenite = { version = "0.27.0", features = ["stream", "native-tls"] }
toml = "0.9.5"
tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
bytes = "1.10.1"
concurrent-queue = "2.5.0"
bitflags = "2.9.4"
async-trait = "0.1.89"
anyhow = "1.0.99"
fastrand = "2.3.0"
parking_lot = "0.12.4"
libloading = "0.8.8"
ahash = "0.8.12"
uuid = { version = "1.18.1", features = ["v4"] }