[package]
name = "database"
version = "0.1.0"
edition.workspace = true

[dependencies]
standard_lib = { path = "../standard_lib" }
chrono = {workspace = true , features = ["serde"] }
rust_decimal = { workspace = true , features = ["serde"] }
serde = { workspace = true , features = ["derive"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
parquet = { version = "56.1.0", default-features = false, features = ["zstd", "arrow"] } # max compression
arrow = { version = "56.1.0", features = ["ipc", "prettyprint"] }
duckdb = { version = "1.4.0"} # duckdb-rs
anyhow = { workspace = true }
ahash = {workspace = true}
tempfile = "3.22.0"
serde_json = "1.0.143"
tokio = "1.47.1"
async-trait = {workspace = true}
nanoid = "0.4.0"