[package]
name = "standard_lib"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
dashmap = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs"] }
tracing = { workspace = true }
bitflags = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
ahash = {workspace = true}
lazy_static = "1.5.0"
uuid = { workspace = true }
zstd = { version = "0.13.3", features = ["zstdmt"] }
crc32fast = "1.5.0"
tempfile = "3.22.0"